@@ -1,30 +1,15 @@
 language: python
-python:
-  - 2.6
-  - 2.7
+python: 2.7
 env:
-  - PLONE_VERSION=4.1
   - PLONE_VERSION=4.2 QA=true
   - PLONE_VERSION=4.3
 matrix:
   allow_failures:
-    - python: 2.6
-      env: PLONE_VERSION=4.1
-    - python: 2.7
-      env: PLONE_VERSION=4.3
-  exclude:
-    - python: 2.7
-      env: PLONE_VERSION=4.1
-    - python: 2.6
-      env: PLONE_VERSION=4.2 QA=true
-    - python: 2.6
-      env: PLONE_VERSION=4.3
+    - env: PLONE_VERSION=4.3
 install:
   - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
-  - test "$PLONE_VERSION" = "4.1" && cat travis-4.1.x.cfg > travis.cfg || true
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
-  - test "$PLONE_VERSION" = "4.1" && bin/buildout -c travis.cfg -N -q -t 3 annotate || true
   - bin/buildout -c travis.cfg -N -q -t 3
 before_script:
   - export DISPLAY=:99.0
