@@ -21,7 +21,6 @@ setup(name='collective.nitf',
         "Development Status :: 3 - Alpha",
         "Environment :: Web Environment",
         "Framework :: Plone",
-        "Framework :: Plone :: 4.1",
         "Framework :: Plone :: 4.2",
         "Framework :: Plone :: 4.3",
         "Intended Audience :: End Users/Desktop",
@@ -73,7 +72,7 @@ setup(name='collective.nitf',
         'plone.registry',
         'plone.uuid',
         'Products.CMFCore',
-        'Products.CMFPlone>=4.1',
+        'Products.CMFPlone>=4.2',
         'Products.GenericSetup',
         'setuptools',
         'z3c.form',
