@@ -1,12 +1,0 @@
-[buildout]
-extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.1.x.cfg
-    https://good-py.appspot.com/release/dexterity/1.2.1?plone=4.1.6
-    versions.cfg
-
-package-name = collective.nitf
-package-extras = [test]
-
-allow-hosts +=
-    code.google.com
-    robotframework.googlecode.com
